Fixed spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -254,23 +254,26 @@ section.why-only-you {
       margin-bottom: 0;
     }
     p {
-      margin-top: 0;
-      font-size: 1.2rem;
+      margin: $lh/2 0;
+      font-size: 1.31rem;
+      letter-spacing: 0.03em;
       max-width: 550px;
     }
   }
 
   ul {
     text-align: center;
+    margin-top: 1.5*$lh;
     li {
       text-align: left;
       vertical-align: top;
       display: inline-block;
-      padding-left: 1.65rem;
+      padding: 0 2rem;
       max-width: 372px;
       h2 {
         position: relative;
         margin-bottom: 0;
+        color: #055b7a;
         &:after {
           content: '';
           width: 21px;
